workspace = { members = ["password_hasher"] }
[package]
name = "catalog2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.1"
chrono = "0.4.38"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
petgraph = { version = "0.6.5", features = ["serde-1"] }
poem = { version = "3.0.1", features = ["eyre06"] }
poem-openapi = { version = "5.0.2", features = ["chrono", "swagger-ui"] }
regex = "1.10.5"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["chrono", "json", "postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
poem = { version = "3.0.1", features = ["test"] }
pretty_assertions = "1.4.0"
