workspace = { members = ["password_hasher"] }
[package]
name = "catalog2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
bcrypt = "0.15.1"
chrono = "0.4.38"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
petgraph = { version = "0.6.5", features = ["serde-1"] }
poem = { version = "3.0.4", features = ["embed", "eyre06", "session"] }
poem-openapi = { version = "5.0.3", features = ["chrono", "swagger-ui"] }
regex = "1.10.6"
rust-embed = "8.5.0"
serde = "1.0.207"
serde_json = "1.0.124"
sqlx = { version = "0.7.4", features = ["chrono", "json", "postgres", "runtime-tokio"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
poem = { version = "3.0.4", features = ["test"] }
pretty_assertions = "1.4.0"
